--- a/Hangman_Game/css/style.css
+++ b/Hangman_Game/css/style.css
@@ -9,6 +9,16 @@ body {
 	background-position: center;
 }
 
+#before-face {
+	position: fixed;
+  	top: 50%;
+  	left: 50%;
+  	height: 300px;
+  	width: 300px;
+  	padding-bottom: 90px;
+  	transform: translate(-50%, -50%);
+}
+
 #excecutioner {
 	float: right;
     margin-left: 20px;
@@ -36,12 +46,12 @@ body {
 	resize: horizontal;
 	height: 60px;
     width: 100px;
-  	left: 50%;
+  	left: 47%;
     top: 80%;
     text-align: center;
     text-decoration: bold;
     font-size: 3em;
-    transform: translate(-50%);
+    /*transform: translate(-50%);*/
 
 }
 
@@ -49,6 +59,6 @@ ul li {
 	color: white;
 	list-style-type: none;
 	font-size: 1.6em;
-	transform: translate(-1%)
+	/*transform: translate(-1%)*/
 }
 
