--- a/Hangman_Game/css/style.css
+++ b/Hangman_Game/css/style.css
@@ -9,49 +9,63 @@ body {
 	background-position: center;
 }
 
+#pulse {
+    position: absolute;
+    border: 2px solid white;
+    height: 340px;
+    width: 530px;
+    padding: 2px;
+    left: 16%;
+    top: 25%;
+    transform: translate(50%);
+}
+
+#toptitle {
+  color: white;
+  font-family: 'Proxanys';
+  font-size: 6.5em;
+  position: absolute;
+  padding: 2px;
+  left: 50%;
+  top: -7%;
+  transform: translate(-50%); /*transform found on CSS tricks to make page resizing responsive. */
+}
+
 #before-face {
 	position: fixed;
-  	top: 50%;
-  	left: 50%;
-  	height: 300px;
-  	width: 300px;
-  	padding-bottom: 90px;
-  	transform: translate(-50%, -50%);
+  top: 52%;
+  left: 46.5%;
+  height: 300px;
+  width: 300px;
+  padding-bottom: 90px;
+  transform: translate(-50%, -50%);
 }
 
 #excecutioner {
 	float: right;
-    margin-left: 20px;
-    margin-bottom: 20px;
-    padding: 5px;
-    height: 330px;
-    width: 210px;
-    margin-top: 186px;
-    margin-right: 20px;
-}
-
-#toptitle {
-	color: white;
-	font-family: 'Proxanys';
-	font-size: 6.5em;
-	position: absolute;
-	padding: 2px;
-  	left: 50%;
-    top: -7%;
-    transform: translate(-50%); /*transform found on CSS tricks to make page resizing responsive. */
+  margin-left: 20px;
+  margin-bottom: 20px;
+  padding: 5px;
+  height: 330px;
+  width: 210px;
+  margin-top: 207px;
+  margin-right: 20px;
 }
 
 #guess-box {
 	position: absolute;
 	resize: horizontal;
+  background-color: black;
+  border: 2px solid white;
 	height: 60px;
-    width: 100px;
-  	left: 47%;
-    top: 80%;
-    text-align: center;
-    text-decoration: bold;
-    font-size: 3em;
-    /*transform: translate(-50%);*/
+  width: 100px;
+  left: 47%;
+  top: 80%;
+  color: white;  
+  text-align: center;
+  text-decoration: bold;
+  font-size: 3em;
+  /*transform: translate(-50%);*/
 
 }
 
