--- a/Hangman_Game/css/style.css
+++ b/Hangman_Game/css/style.css
@@ -59,14 +59,47 @@ body {
   border: 2px solid white;
 	height: 60px;
   width: 100px;
-  left: 47%;
-  top: 80%;
+  left: 14.5%;
+  top: 42%;
   color: white;  
   text-align: center;
   text-decoration: bold;
   font-size: 3em;
   /*transform: translate(-50%);*/
+}
 
+#guess-button {
+  position: absolute;
+  resize: horizontal;
+  background-color: black;
+  border: 2px solid white;
+  height: 30px;
+  width: 55px;
+  left: 16%;
+  top: 52%;
+  color: white;  
+  text-align: center;
+  text-decoration: bold;
+  font-size: 1em;
+}
+
+.dubs {
+  /*border-bottom: 2px solid white;
+  height: 20px;
+    width: 20px;
+    padding: 10px;
+    margin: 10px;*/
+    display: flex;
+    position: absolute;
+    border-bottom: 2px solid white;
+   /* height: 20px;
+    width: 20px;*/
+    padding: 10px;
+    margin-right: 30px;
+    /*border: 2px solid white;*/
+    left: 16%;
+    top: 25%;
+    transform: translate(50%);
 }
 
 ul li {
