--- a/Hangman_Game/css/style.css
+++ b/Hangman_Game/css/style.css
@@ -10,14 +10,14 @@ body {
 }
 
 #pulse {
-    position: absolute;
-    border: 2px solid white;
-    height: 340px;
-    width: 530px;
-    padding: 2px;
-    left: 16%;
-    top: 25%;
-    transform: translate(50%);
+  position: absolute;
+  border: 2px solid white;
+  height: 450px;
+  width: 570px;
+  padding: 2px;
+  left: 13%;
+  top: 22%;
+  transform: translate(50%);
 }
 
 #toptitle {
@@ -26,7 +26,7 @@ body {
   font-size: 6.5em;
   position: absolute;
   padding: 2px;
-  left: 50%;
+  left: 49%;
   top: -7%;
   transform: translate(-50%); /*transform found on CSS tricks to make page resizing responsive. */
 }
@@ -37,7 +37,7 @@ body {
   left: 46.5%;
   height: 300px;
   width: 300px;
-  padding-bottom: 90px;
+  padding-bottom: 83px;
   transform: translate(-50%, -50%);
 }
 
@@ -48,7 +48,7 @@ body {
   padding: 5px;
   height: 330px;
   width: 210px;
-  margin-top: 207px;
+  margin-top: 255px;
   margin-right: 20px;
 }
 
@@ -83,29 +83,57 @@ body {
   font-size: 1em;
 }
 
-.dubs {
-  /*border-bottom: 2px solid white;
-  height: 20px;
-    width: 20px;
-    padding: 10px;
-    margin: 10px;*/
-    display: flex;
-    position: absolute;
-    border-bottom: 2px solid white;
-   /* height: 20px;
-    width: 20px;*/
-    padding: 10px;
-    margin-right: 30px;
-    /*border: 2px solid white;*/
-    left: 16%;
-    top: 25%;
-    transform: translate(50%);
+@import "compass/css3";
+
+#the-word {
+  display: -webkit-box;
+  width: 100px;
 }
 
-ul li {
+.dubs {
+  display: -webkit-box;
+  border-bottom: 1px solid white;
+  margin: 1px;
+  padding: 1px;
+  width: 10px;
+}
+
+#alpha-row {
 	color: white;
 	list-style-type: none;
 	font-size: 1.6em;
 	/*transform: translate(-1%)*/
 }
 
+@import "compass/css3";
+
+.flex-container {
+ padding: 90px;
+    margin: 89px;
+    list-style: none;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: space-around;
+    width: 657px;
+    margin-left: 23%;
+}
+
+.flex-item {
+    background: black;
+    border-bottom: 1px solid yellow;
+    border-top: 1px solid yellow;
+    border-right: 1px solid blue;
+    border-left: 1px solid blue;
+    padding: 15px;
+    width: 55px;
+    height: 11px;
+    margin-top: -222px;
+    line-height: 11px;
+    color: white;
+    /* font-weight: bold; */
+    font-size: 2em;
+    text-align: center;
+}
