--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,8 @@ body {
   height: 450px;
   width: 570px;
   padding: 2px;
-  left: 13%;
+  left: 31%;
   top: 22%;
-  transform: translate(50%);
 }
 
 #toptitle {
@@ -26,19 +25,17 @@ body {
   font-size: 6.5em;
   position: absolute;
   padding: 2px;
-  left: 49%;
+  left: 36.5%;
   top: -7%;
-  transform: translate(-50%); /*transform found on CSS tricks to make page resizing responsive. */
 }
 
 #before-face {
-	position: fixed;
-  top: 52%;
-  left: 46.5%;
+	position: absolute;
+  top: 30%;
+  left: 36.5%;
   height: 300px;
   width: 300px;
   padding-bottom: 83px;
-  transform: translate(-50%, -50%);
 }
 
 #excecutioner {
@@ -60,12 +57,11 @@ body {
 	height: 60px;
   width: 100px;
   left: 14.5%;
-  top: 42%;
+  top: 44%;
   color: white;  
   text-align: center;
   text-decoration: bold;
   font-size: 3em;
-  /*transform: translate(-50%);*/
 }
 
 #guess-button {
@@ -74,66 +70,45 @@ body {
   background-color: black;
   border: 2px solid white;
   height: 30px;
-  width: 55px;
+  width: 56px;
   left: 16%;
-  top: 52%;
+  top: 54%;
   color: white;  
-  text-align: center;
+  text-align: center;`
   text-decoration: bold;
   font-size: 1em;
 }
 
-@import "compass/css3";
-
-#the-word {
-  display: -webkit-box;
-  width: 100px;
-}
-
-.dubs {
-  display: -webkit-box;
-  border-bottom: 1px solid white;
-  margin: 1px;
-  padding: 1px;
-  width: 10px;
-}
-
-#alpha-row {
+.alpha-row {
 	color: white;
 	list-style-type: none;
 	font-size: 1.6em;
-	/*transform: translate(-1%)*/
 }
 
-@import "compass/css3";
-
-.flex-container {
- padding: 90px;
-    margin: 89px;
-    list-style: none;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: space-around;
-    width: 657px;
-    margin-left: 23%;
+/* I previously tried to inline a div class which worked in the inspector tools but for some reason reverted back when 
+mirroring code to css page.  I could not override "user agent stylesheet". Display flex */
+.the-word {
+  padding: 90px;
+  margin: 89px;
+  list-style: none;
+  display: flex;
+  width: 657px;
+  margin-left: 23%;
 }
 
-.flex-item {
-    background: black;
-    border-bottom: 1px solid yellow;
-    border-top: 1px solid yellow;
-    border-right: 1px solid blue;
-    border-left: 1px solid blue;
-    padding: 15px;
-    width: 55px;
-    height: 11px;
-    margin-top: -222px;
-    line-height: 11px;
-    color: white;
-    /* font-weight: bold; */
-    font-size: 2em;
-    text-align: center;
+.dubs {
+  background: black;
+  border-bottom: 1px solid yellow;
+  border-top: 1px solid yellow;
+  border-right: 1px solid blue;
+  border-left: 1px solid blue;
+  padding: 15px;
+  width: 55px;
+  height: 11px;
+  margin-top: -222px;
+  line-height: 11px;
+  color: white;
+  /* font-weight: bold; */
+  font-size: 2em;
+  text-align: center;
 }
