--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 
 #pulse {
   position: absolute;
+  opacity: 0.7;
   border: 2px solid white;
   height: 450px;
   width: 570px;
@@ -32,7 +33,7 @@ body {
 #before-face {
 	position: absolute;
   top: 30%;
-  left: 36.5%;
+  left: 37%;
   height: 300px;
   width: 300px;
   padding-bottom: 83px;
@@ -53,6 +54,7 @@ body {
 	position: absolute;
 	resize: horizontal;
   background-color: black;
+  opacity: 0.6;
   border: 2px solid white;
 	height: 60px;
   width: 100px;
@@ -68,13 +70,14 @@ body {
   position: absolute;
   resize: horizontal;
   background-color: black;
+  opacity: 0.7;
   border: 2px solid white;
   height: 30px;
   width: 56px;
   left: 16%;
   top: 54%;
   color: white;  
-  text-align: center;`
+  text-align: center;
   text-decoration: bold;
   font-size: 1em;
 }
@@ -88,27 +91,22 @@ body {
 /* I previously tried to inline a div class which worked in the inspector tools but for some reason reverted back when 
 mirroring code to css page.  I could not override "user agent stylesheet". Display flex */
 .the-word {
-  padding: 90px;
-  margin: 89px;
   list-style: none;
   display: flex;
-  width: 657px;
-  margin-left: 23%;
+  margin-left: 28.5%;
 }
 
 .dubs {
   background: black;
+  opacity: 0.7;
   border-bottom: 1px solid yellow;
-  border-top: 1px solid yellow;
-  border-right: 1px solid blue;
-  border-left: 1px solid blue;
+  border-top: 1px solid blue;
   padding: 15px;
-  width: 55px;
-  height: 11px;
-  margin-top: -222px;
+  width: 41.5px;
+  height: 16px;
+  margin-top: -71px;
   line-height: 11px;
   color: white;
-  /* font-weight: bold; */
-  font-size: 2em;
+  font-size: 1.5em;
   text-align: center;
 }
