--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,36 @@ body {
   margin-right: 20px;
 }
 
-#guess-box {
+.alpha-row {
+  color: white;
+  list-style-type: none;
+  font-size: 1.6em;
+}
+
+/* I previously tried to inline a div class which worked in the inspector tools but for some reason reverted back when 
+mirroring code to css page.  I could not override "user agent stylesheet". Display flex */
+.the-word {
+  list-style: none;
+  display: flex;
+  margin-left: 27.5%;
+}
+
+.dubs {
+  background: black;
+  opacity: 0.7;
+  border-bottom: 1px solid yellow;
+  border-top: 1px solid blue;
+  padding: 15px;
+  width: 53px;
+  height: 16px;
+  margin-top: -71px;
+  line-height: 11px;
+  color: white;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+/*#guess-box {
 	position: absolute;
 	resize: horizontal;
   background-color: black;
@@ -80,33 +109,4 @@ body {
   text-align: center;
   text-decoration: bold;
   font-size: 1em;
-}
-
-.alpha-row {
-	color: white;
-	list-style-type: none;
-	font-size: 1.6em;
-}
-
-/* I previously tried to inline a div class which worked in the inspector tools but for some reason reverted back when 
-mirroring code to css page.  I could not override "user agent stylesheet". Display flex */
-.the-word {
-  list-style: none;
-  display: flex;
-  margin-left: 27.5%;
-}
-
-.dubs {
-  background: black;
-  opacity: 0.7;
-  border-bottom: 1px solid yellow;
-  border-top: 1px solid blue;
-  padding: 15px;
-  width: 53px;
-  height: 16px;
-  margin-top: -71px;
-  line-height: 11px;
-  color: white;
-  font-size: 1.5em;
-  text-align: center;
-}
+}*/
