--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Proxanys'; /* specify how you want the font to be referenced in the font-family property -Matt Hunington */
+    font-family: 'Proxanys'; /* "specify how you want the font to be referenced in the font-family property" -Matt Hunington */
     src: "fonts/Proxanys.tff"; /* see README.md for origination */
 }
 
@@ -11,7 +11,7 @@ body {
 
 #pulse {
   position: absolute;
-  opacity: 0.7;
+  opacity: 0.6;
   border: 2px solid white;
   height: 450px;
   width: 570px;
@@ -61,12 +61,14 @@ mirroring code to css page.  I could not override "user agent stylesheet". Displ
 .the-word {
   list-style: none;
   display: flex;
-  margin-left: 27.5%;
+  margin-left: 25%;
+  color: white;
+
 }
 
 .dubs {
   background: black;
-  opacity: 0.7;
+  opacity: 0.6;
   border-bottom: 1px solid yellow;
   border-top: 1px solid blue;
   padding: 15px;
@@ -74,10 +76,12 @@ mirroring code to css page.  I could not override "user agent stylesheet". Displ
   height: 16px;
   margin-top: -71px;
   line-height: 11px;
-  color: white;
+  /*color: white;*/
   font-size: 1.5em;
   text-align: center;
 }
+
+/*////DELETED GUESS BOX////*/
 
 /*#guess-box {
 	position: absolute;
@@ -110,3 +114,5 @@ mirroring code to css page.  I could not override "user agent stylesheet". Displ
   text-decoration: bold;
   font-size: 1em;
 }*/
+
+/*////////////////////////*/
